--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,14 +11,133 @@
         {% endblock %}
     </head>
     <body>
+        {% block header %}
+            <div class="header-top-w3layouts">
+                <div class="container">
+                    <div class="col-md-6 logo-w3">
+                        <a href="/index"><img src="images/logo2.png" alt=" " /><h1>FASHION<span>CLUB</span></h1></a>
+                    </div>
+                    <div class="col-md-6 phone-w3l">
+                        <ul>
+                            <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span></li>
+                            <li>+18045403380</li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+            <div class="header-bottom-w3ls">
+                <div class="container">
+                    <div class="col-md-7 navigation-agileits">
+                        <nav class="navbar navbar-default">
+                            <div class="navbar-header nav_2">
+                                <button type="button" class="navbar-toggle collapsed navbar-toggle1" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            </div> 
+                            <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
+                                <ul class="nav navbar-nav ">
+                                    <li class=" active"><a href="/index" class="hyper "><span>Home</span></a></li>	
+                                    <li class="dropdown ">
+                                        <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Clothing<b class="caret"></b></span></a>
+                                            <ul class="dropdown-menu multi">
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        <ul class="multi-column-dropdown">
+                        
+                                                            <li><a href="women.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Women's Clothing</a></li>
+                                                            <li><a href="men.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Men's Clothing</a></li>
+                                                            <li><a href="kids.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Kid's Wear</a></li>
+                                                            <li><a href="party.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Party Wear</a></li>
+                                                    
+                                                        </ul>
+                                                    
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        <ul class="multi-column-dropdown">
+                                                            <li><a href="casuals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Casuals</a></li>
+                                                            <li><a href="night.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Night Wear</a></li>
+                                                            <li><a href="formals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Formals</a></li>
+                                                            <li><a href="inner.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Inner Wear</a></li>
+                                                    
+                                                        </ul>						
+                                                    </div>
+                                                    <div class="col-sm-4 w3l">
+                                                        <a href="women.html"><img src="images/menu1.jpg" class="img-responsive" alt=""></a>
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                </div>	
+                                            </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span> Personal Care <b class="caret"></b></span></a>
+                                            <ul class="dropdown-menu multi multi1">
+                                                <div class="row">
+                                                    <div class="col-sm-4">
+                                                        <ul class="multi-column-dropdown">
+                                                            <li><a href="jewellery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Jewellery </a></li>
+                                                            <li><a href="watches.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Watches</a></li>
+                                                            <li><a href="cosmetics.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Cosmetics</a></li>
+                                                            <li><a href="deos.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Deo & Perfumes</a></li>
+                                                    
+                                                        </ul>
+                                                        
+                                                    </div>
+                                                    <div class="col-sm-4">
+                                                        
+                                                        <ul class="multi-column-dropdown">
+                                                            <li><a href="haircare.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Hair Care </a></li>
+                                                            <li><a href="shoes.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Shoes</a></li>
+                                                            <li><a href="handbags.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Handbags</a></li>
+                                                            <li><a href="skincare.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Skin care</a></li>
+                                                    
+                                                        </ul>
+                                                        
+                                                    </div>
+                                                    <div class="col-sm-4 w3l">
+                                                        <a href="jewellery.html"><img src="images/menu2.jpg" class="img-responsive" alt=""></a>
+                                                    </div>
+                                                    <div class="clearfix"></div>
+                                                </div>	
+                                            </ul>
+                                    </li>
+                                    <li><a href="/about" class="hyper"><span>About</span></a></li>
+                                </ul>
+                            </div>
+                        </nav>
+                    </div>
+                <div class="col-md-4 search-agileinfo">
+                    <form action="#" method="post">
+                        <input type="search" name="Search" placeholder="Search for a Product..." required="">
+                        <button type="submit" class="btn btn-default search" aria-label="Left Align">
+                            <i class="fa fa-search" aria-hidden="true"> </i>
+                        </button>
+                    </form>
+                </div>
+                <div class="col-md-1 cart-wthree">
+                    <div class="cart"> 
+                        <form action="#" method="post" class="last"> 
+                            <input type="hidden" name="cmd" value="_cart" />
+                            <input type="hidden" name="display" value="1" />
+                            <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+                        </form>  
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+</div>        
+        {% endblock %}
 
         {% block body %}{% endblock %}
 
         {% block footer %}
             <div class="footer">
                 <div class="container">
-                    <div class="col-md-3 footer-grids fgd1">
-                    <a href="index.html"><img src="images/logo2.png" alt=" " /><h3>FASHION<span>CLUB</span></h3></a>
+                    <div class="col-md-4 footer-grids fgd1">
+                    <a href="/index"><img src="images/logo2.png" alt=" " /><h3>FASHION<span>CLUB</span></h3></a>
                     <ul>
                         <li>1234k Avenue, 4th block,</li>
                         <li>New York City.</li>
@@ -29,32 +148,21 @@
                         <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </ul>
                     </div>
-                    <div class="col-md-3 footer-grids fgd2">
+                    <div class="col-md-4 footer-grids fgd2">
                         <h4>Information</h4> 
                         <ul>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="/contact">Contact Us</a></li>
                             <li><a href="icons.html">Web Icons</a></li>
                             <li><a href="typography.html">Typography</a></li>
                             <li><a href="faq.html">FAQ's</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-3 footer-grids fgd3">
-                        <h4>Shop</h4> 
-                        <ul>
-                            <li><a href="jewellery.html">Jewellery</a></li>
-                            <li><a href="cosmetics.html">Cosmetics</a></li>
-                            <li><a href="Shoes.html">Shoes</a></li>
-                            <li><a href="deos.html">Deos</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3 footer-grids fgd4">
+                    <div class="col-md-4 footer-grids fgd4">
                         <h4>My Account</h4> 
                         <ul>
                             
-                            <li><a href="login.html">Login</a></li>
-                            <li><a href="register.html">Register</a></li>
-                            <li><a href="recommended.html">Recommended </a></li>
-                            <li><a href="payment.html">Payments</a></li>
+                            <li><a href="/login">Login</a></li>
+                            <li><a href="/register">Register</a></li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
@@ -66,6 +174,38 @@
         {% block javascripts %}
             <script src={{asset("js/jquery-3.6.0.min.js")}}></script>
             <script src={{asset("js/bootstrap.js")}}></script>
+            <script src={{asset("js/minicart.js")}}></script>
+            <script>
+                $(document).ready(function(){
+                    $(".dropdown").hover(            
+                        function() {
+                            $('.dropdown-menu', this).stop( true, true ).slideDown("fast");
+                            $(this).toggleClass('open');        
+                        },
+                        function() {
+                            $('.dropdown-menu', this).stop( true, true ).slideUp("fast");
+                            $(this).toggleClass('open');       
+                        }
+                    );
+
+                });
+            </script>
+            <script>
+                w3ls1.render();
+
+                w3ls1.cart.on('w3sb1_checkout', function (evt) {
+        	        var items, len, i;
+
+        	        if (this.subtotal() > 0) {
+        		        items = this.items();
+
+        		        for (i = 0, len = items.length; i < len; i++) {
+        			        items[i].set('shipping', 0);
+        			        items[i].set('shipping2', 0);
+        		        }
+        	        }
+                });
+            </script>
         {% endblock %}
     </body>
 </html>
