--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,95 +40,55 @@
                             </div> 
                             <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                                 <ul class="nav navbar-nav ">
-                                    <li class=" active"><a href="/index" class="hyper "><span>Home</span></a></li>	
+                                    <li><a href="/index" class="hyper "><span>Inicio</span></a></li>	
                                     <li class="dropdown ">
-                                        <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Clothing<b class="caret"></b></span></a>
+                                        <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Productos<b class="caret"></b></span></a>
                                             <ul class="dropdown-menu multi">
                                                 <div class="row">
-                                                    <div class="col-sm-4">
+                                                    <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                        
-                                                            <li><a href="women.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Women's Clothing</a></li>
-                                                            <li><a href="men.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Men's Clothing</a></li>
-                                                            <li><a href="kids.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Kid's Wear</a></li>
-                                                            <li><a href="party.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Party Wear</a></li>
-                                                    
+                                                            <li><a href="women"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
+                                                            <li><a href="men"><i class="fa fa-angle-right" aria-hidden="true"></i>Trajes Product</a></li>
+                                                            <li><a href="kids"> <i class="fa fa-angle-right" aria-hidden="true"></i>Aletas Product</a></li>                                                    
                                                         </ul>
                                                     
                                                     </div>
-                                                    <div class="col-sm-4">
+                                                    <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="casuals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Casuals</a></li>
-                                                            <li><a href="night.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Night Wear</a></li>
-                                                            <li><a href="formals.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Formals</a></li>
-                                                            <li><a href="inner.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Inner Wear</a></li>
-                                                    
+                                                            <li><a href="casuals"><i class="fa fa-angle-right" aria-hidden="true"></i>Botellas Product</a></li>
+                                                            <li><a href="night"><i class="fa fa-angle-right" aria-hidden="true"></i>Medidor Product</a></li>
+                                                            <li><a href="formals"><i class="fa fa-angle-right" aria-hidden="true"></i>Camaras Product</a></li>                                                    
                                                         </ul>						
                                                     </div>
-                                                    <div class="col-sm-4 w3l">
-                                                        <a href="women.html"><img src="images/menu1.jpg" class="img-responsive" alt=""></a>
-                                                    </div>
                                                     <div class="clearfix"></div>
                                                 </div>	
                                             </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span> Personal Care <b class="caret"></b></span></a>
-                                            <ul class="dropdown-menu multi multi1">
-                                                <div class="row">
-                                                    <div class="col-sm-4">
-                                                        <ul class="multi-column-dropdown">
-                                                            <li><a href="jewellery.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Jewellery </a></li>
-                                                            <li><a href="watches.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Watches</a></li>
-                                                            <li><a href="cosmetics.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Cosmetics</a></li>
-                                                            <li><a href="deos.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Deo & Perfumes</a></li>
-                                                    
-                                                        </ul>
-                                                        
-                                                    </div>
-                                                    <div class="col-sm-4">
-                                                        
-                                                        <ul class="multi-column-dropdown">
-                                                            <li><a href="haircare.html"> <i class="fa fa-angle-right" aria-hidden="true"></i>Hair Care </a></li>
-                                                            <li><a href="shoes.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Shoes</a></li>
-                                                            <li><a href="handbags.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Handbags</a></li>
-                                                            <li><a href="skincare.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Skin care</a></li>
-                                                    
-                                                        </ul>
-                                                        
-                                                    </div>
-                                                    <div class="col-sm-4 w3l">
-                                                        <a href="jewellery.html"><img src="images/menu2.jpg" class="img-responsive" alt=""></a>
-                                                    </div>
-                                                    <div class="clearfix"></div>
-                                                </div>	
-                                            </ul>
-                                    </li>
-                                    <li><a href="/about" class="hyper"><span>About</span></a></li>
+                                        </li>
+                                    <li><a href="/about" class="hyper"><span>Sobre nosotros</span></a></li>
                                 </ul>
                             </div>
                         </nav>
                     </div>
-                <div class="col-md-4 search-agileinfo">
-                    <form action="#" method="post">
-                        <input type="search" name="Search" placeholder="Search for a Product..." required="">
-                        <button type="submit" class="btn btn-default search" aria-label="Left Align">
-                            <i class="fa fa-search" aria-hidden="true"> </i>
-                        </button>
-                    </form>
-                </div>
-                <div class="col-md-1 cart-wthree">
-                    <div class="cart"> 
-                        <form action="#" method="post" class="last"> 
-                            <input type="hidden" name="cmd" value="_cart" />
-                            <input type="hidden" name="display" value="1" />
-                            <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                        </form>  
+                    <div class="col-md-4 search-agileinfo">
+                        <form action="#" method="post">
+                            <input type="search" name="Search" placeholder="Search for a Product..." required="">
+                            <button type="submit" class="btn btn-default search" aria-label="Left Align">
+                                <i class="fa fa-search" aria-hidden="true"> </i>
+                            </button>
+                        </form>
                     </div>
+                    <div class="col-md-1 cart-wthree">
+                        <div class="cart"> 
+                            <form action="#" method="post" class="last"> 
+                                <input type="hidden" name="cmd" value="_cart" />
+                                <input type="hidden" name="display" value="1" />
+                                <button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
+                            </form>  
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
                 </div>
-                <div class="clearfix"></div>
-            </div>
-</div>        
+            </div>        
         {% endblock %}
 
         {% block body %}{% endblock %}
@@ -152,9 +112,9 @@
                         <h4>Information</h4> 
                         <ul>
                             <li><a href="/contact">Contact Us</a></li>
-                            <li><a href="icons.html">Web Icons</a></li>
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="faq.html">FAQ's</a></li>
+                            <li><a href="icons">Web Icons</a></li>
+                            <li><a href="typography">Typography</a></li>
+                            <li><a href="faq">FAQ's</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4 footer-grids fgd4">
@@ -175,7 +135,10 @@
             <script src={{asset("js/jquery-3.6.0.min.js")}}></script>
             <script src={{asset("js/bootstrap.js")}}></script>
             <script src={{asset("js/minicart.js")}}></script>
+            <script src={{asset("js/jquery.wmuSlider.js")}}></script>
+            <script type="text/javascript" src={{asset("js/jquery.flexisel.js")}}></script>
             <script>
+               
                 $(document).ready(function(){
                     $(".dropdown").hover(            
                         function() {
@@ -188,9 +151,31 @@
                         }
                     );
 
+                    $("#flexiselDemo1").flexisel({
+                        visibleItems: 4,
+                        animationSpeed: 1000,
+                        autoPlay: true,
+                        autoPlaySpeed: 5000,    		
+                        pauseOnHover: true,
+                        enableResponsiveBreakpoints: true,
+                        responsiveBreakpoints: { 
+                            portrait: { 
+                            changePoint:480,
+                            visibleItems: 1
+                            }, 
+                            landscape: { 
+                                changePoint:640,
+                                visibleItems:2
+                            },
+                            tablet: { 
+                                changePoint:768,
+                                visibleItems: 3
+                            }
+                        }
+                    });
+
                 });
-            </script>
-            <script>
+
                 w3ls1.render();
 
                 w3ls1.cart.on('w3sb1_checkout', function (evt) {
@@ -205,7 +190,11 @@
         		        }
         	        }
                 });
+                 $('.example1').wmuSlider();
+                
             </script>
+           
+
         {% endblock %}
     </body>
 </html>
