--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,25 +16,25 @@
 				
 					<div class="key">
 						<i class="fa fa-user" aria-hidden="true"></i>
-						{{ form_row(registrationForm.nombre, {'attr':{'placeholder': 'Name'}}) }}
+						{{ form_widget(registrationForm.nombre, {'attr':{'placeholder': 'Name'}}) }}
 						
 						<div class="clearfix"></div>
 					</div>
 					<div class="key">
 						<i class="fa fa-user" aria-hidden="true"></i>
-						{{ form_row(registrationForm.apellidos, {'attr':{'placeholder': 'Last Name'}}) }}
+						{{ form_widget(registrationForm.apellidos, {'attr':{'placeholder': 'Last Name'}}) }}
 						
 						<div class="clearfix"></div>
 					</div>
 					<div class="key">
 						<i class="fa fa-envelope" aria-hidden="true"></i>
-						{{ form_row(registrationForm.email, {'attr':{'placeholder': 'Email'}}) }}
+						{{ form_widget(registrationForm.email, {'attr':{'placeholder': 'Email'}}) }}
 						
 						<div class="clearfix"></div>
 					</div>
 					<div class="key">
 						<i class="fa fa-lock" aria-hidden="true"></i>
-							{{ form_row(registrationForm.plainPassword, {'attr':{'placeholder': 'Password'}}) }}	
+							{{ form_widget(registrationForm.plainPassword, {'attr':{'placeholder': 'Password'}}) }}	
 							
 							<div class="clearfix"></div>
 					</div>
