--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
             <div class="header-top-w3layouts">
                 <div class="container">
                     <div class="col-md-6 logo-w3">
-                        <a href="/index"><img src="images/logo2.png" alt=" " /><h1>FASHION<span>CLUB</span></h1></a>
+                        <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h1>SEA<span>WATER</span></h1></a>
                     </div>
                     <div class="col-md-6 phone-w3l">
                         <ul>
@@ -47,7 +47,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="women"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
+                                                            <li><a href="producto/gafas"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
                                                             <li><a href="men"><i class="fa fa-angle-right" aria-hidden="true"></i>Trajes Product</a></li>
                                                             <li><a href="kids"> <i class="fa fa-angle-right" aria-hidden="true"></i>Aletas Product</a></li>                                                    
                                                         </ul>
@@ -97,7 +97,7 @@
             <div class="footer">
                 <div class="container">
                     <div class="col-md-4 footer-grids fgd1">
-                    <a href="/index"><img src="images/logo2.png" alt=" " /><h3>FASHION<span>CLUB</span></h3></a>
+                    <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h3>FASHION<span>CLUB</span></h3></a>
                     <ul>
                         <li>1234k Avenue, 4th block,</li>
                         <li>New York City.</li>
