--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
             <div class="header-top-w3layouts">
                 <div class="container">
                     <div class="col-md-6 logo-w3">
-                        <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h1>SEA<span>WATER</span></h1></a>
+                        <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h1>WILDSEA<span>CLUB</span></h1></a>
                     </div>
                     <div class="col-md-6 phone-w3l">
                         <ul>
