push de control antes de la clave

--- a/templates/producto_gafas/index.html.twig
+++ b/templates/producto_gafas/index.html.twig
@@ -56,8 +56,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-8 col-sm-8 women-dresses">
-			<div class="women-set1">
+		<div id="productos" class="col-md-8 col-sm-8 women-dresses">
+			
 				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp1.jpg")}} alt="" />
@@ -67,7 +67,9 @@
 								<input type="hidden" name="add" value="1" /> 
 								<input type="hidden" name="w3ls1_item" value="Pencil dress" /> 
 								<input type="hidden" name="amount" value="50.00" /> 
-								<button type="submit" class="w3ls-cart pw3ls-cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</button>
+								<button type="submit" class="w3ls-cart pw3ls-cart">
+									<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+								</button>
 							</form>
 						</div>
 					</div></a>
@@ -122,8 +124,7 @@
 					<h5 class="precio-producto">$90.00</h5>
 				</div>
 				<div class="clearfix"></div>
-			</div>
-			<div class="women-set2">
+			
 				<div class="col-md-4 women-grids wp4 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp2.jpg")}} alt="" />
@@ -188,8 +189,7 @@
 					<h5 class="precio-producto">$160.00</h5>
 				</div>
 				<div class="clearfix"></div>
-			</div>
-			<div class="women-set3">
+			
 				<div class="col-md-4 women-grids wp7 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp7.jpg")}} alt="" />
@@ -254,7 +254,6 @@
 					<h5 class="precio-producto">$130.00</h5>
 				</div>
 				<div class="clearfix"></div>
-			</div>
 		</div>
 	</div>
 </div>
