--- a/templates/producto_gafas/index.html.twig
+++ b/templates/producto_gafas/index.html.twig
@@ -59,28 +59,273 @@
 		<div id="productos" class="col-md-8 col-sm-8 women-dresses">
 			
 				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
-					<a href="single.html"><div class="product-img">
-						<img src={{asset("images/wp1.jpg")}} alt="" />
-						<div class="p-mask">
-							<form action="#" method="post">
-								<input type="hidden" name="cmd" value="_cart" />
-								<input type="hidden" name="add" value="1" /> 
-								<input type="hidden" name="w3ls1_item" value="Pencil dress" /> 
-								<input type="hidden" name="amount" value="50.00" /> 
-								<button type="submit" class="w3ls-cart pw3ls-cart">
-									<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
-								</button>
-							</form>
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
 						</div>
-					</div></a>
-					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
-					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
-					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
-					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
-					<i class="fa fa-star gray-star" aria-hidden="true"></i>
-					<h4 class="titulo-producto">Pencil dress</h4>
-					<h5 class="precio-producto">$50.00</h5>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
 				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="">
+						<div class="product-img">
+							<img src={{asset("images/wp1.jpg")}}/>
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart" />
+									<input type="hidden" name="add" value="1" /> 
+									<input type="hidden" name="w3ls1_item" value="" /> 
+									<input type="hidden" name="amount" value="" /> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto"></h4>
+					<h5 class="precio-producto"></h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s">
+					<a href="">
+						<div class="product-img">
+							<img src="../../images/subidas/p1botella.jpg">
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart">
+									<input type="hidden" name="add" value="1"> 
+									<input type="hidden" name="w3ls1_item" value="LUXFER BOTELLA ALUMINIO 7 LITROS"> 
+									<input type="hidden" name="amount" value="20"> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto">LUXFER BOTELLA ALUMINIO 7 LITROS</h4>
+					<h5 class="precio-producto">20 €</h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s">
+					<a href="">
+						<div class="product-img">
+							<img src="../../images/subidas/p1botella.jpg">
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart">
+									<input type="hidden" name="add" value="1"> 
+									<input type="hidden" name="w3ls1_item" value="LUXFER BOTELLA ALUMINIO 7 LITROS"> 
+									<input type="hidden" name="amount" value="20"> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto">LUXFER BOTELLA ALUMINIO 7 LITROS</h4>
+					<h5 class="precio-producto">20 €</h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s">
+					<a href="">
+						<div class="product-img">
+							<img src="../../images/subidas/p1botella.jpg">
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart">
+									<input type="hidden" name="add" value="1"> 
+									<input type="hidden" name="w3ls1_item" value="LUXFER BOTELLA ALUMINIO 7 LITROS"> 
+									<input type="hidden" name="amount" value="20"> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto">LUXFER BOTELLA ALUMINIO 7 LITROS</h4>
+					<h5 class="precio-producto">20 €</h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s">
+					<a href="">
+						<div class="product-img">
+							<img src="../../images/subidas/p1botella.jpg">
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart">
+									<input type="hidden" name="add" value="1"> 
+									<input type="hidden" name="w3ls1_item" value="LUXFER BOTELLA ALUMINIO 7 LITROS"> 
+									<input type="hidden" name="amount" value="20"> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto">LUXFER BOTELLA ALUMINIO 7 LITROS</h4>
+					<h5 class="precio-producto">20 €</h5>
+				</div>
+
+				<div class="col-md-4 women-grids wp1 animated wow slideInUp" data-wow-delay=".5s">
+					<a href="">
+						<div class="product-img">
+							<img src="../../images/subidas/p1botella.jpg">
+							<div class="p-mask">
+								<form action="#" method="post">
+									<input type="hidden" name="cmd" value="_cart">
+									<input type="hidden" name="add" value="1"> 
+									<input type="hidden" name="w3ls1_item" value="LUXFER BOTELLA ALUMINIO 7 LITROS"> 
+									<input type="hidden" name="amount" value="20"> 
+									<button type="submit" class="w3ls-cart pw3ls-cart">
+										<i class="fa fa-cart-plus" aria-hidden="true"></i>Add to cart
+									</button>
+								</form>
+							</div>
+						</div>
+					</a>
+
+					<h4 class="titulo-producto">LUXFER BOTELLA ALUMINIO 7 LITROS</h4>
+					<h5 class="precio-producto">20 €</h5>
+				</div>
+
+				<div id="paginacion">
+				
+				</div>
+				{#
 				<div class="col-md-4 women-grids wp2 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp4.jpg")}} alt="" />
@@ -231,8 +476,8 @@
 					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
 					<h4 class="titulo-producto">Casual dress</h4>
 					<h5 class="precio-producto">$180.00</h5>
-				</div>
-				<div class="col-md-4 women-grids wp9 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+				</div> #}
+				{# <div class="col-md-4 women-grids wp9 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp9.jpg")}} alt=""/>
 						<div class="p-mask">
@@ -252,8 +497,8 @@
 					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
 					<h4 class="titulo-producto">Casual dress</h4>
 					<h5 class="precio-producto">$130.00</h5>
-				</div>
-				<div class="clearfix"></div>
+				</div> #}
+				
 		</div>
 	</div>
 </div>
