--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2934,6 +2934,8 @@ p.w3-agile{
 		float: left;
 		height:inherit;
 	}
+
+
 	.fgd3{
 		margin-bottom:30px;
 	}
@@ -3174,5 +3176,59 @@ p.w3-agile{
 		background: url(../images/banner2.jpg) no-repeat -50px 0px;
 		background-size: cover;
 	}
+}
+
+.paginacion{
+
+	text-align: center;
+
+}
+
+.paginacion a{
+
+	
+	display:inline-block
+	
+}
+
+  .loader {
+	border: 16px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 16px solid #3498db;
+	width: 120px;
+	height: 120px;
+	-webkit-animation: spin 1s linear infinite; /* Safari */
+	animation: spin 1s linear infinite;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
+
+  
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(7, 7, 7);
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
+    z-index: 10000;
+}
+
+#overlay .loader{
+   margin-left: 55%;
+   margin-top: 25%;
 }
 /*-- //responsive--*/
