--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="producto/gafas"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
+                                                            <li><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i>Gafas Product</a></li>
                                                             <li><a href="men"><i class="fa fa-angle-right" aria-hidden="true"></i>Trajes Product</a></li>
                                                             <li><a href="kids"> <i class="fa fa-angle-right" aria-hidden="true"></i>Aletas Product</a></li>                                                    
                                                         </ul>
@@ -55,7 +55,7 @@
                                                     </div>
                                                     <div class="col-sm-6">
                                                         <ul class="multi-column-dropdown">
-                                                            <li><a href="casuals"><i class="fa fa-angle-right" aria-hidden="true"></i>Botellas Product</a></li>
+                                                            <li><a href="producto/botellas"><i class="fa fa-angle-right" aria-hidden="true"></i>Botellas Product</a></li>
                                                             <li><a href="night"><i class="fa fa-angle-right" aria-hidden="true"></i>Medidor Product</a></li>
                                                             <li><a href="formals"><i class="fa fa-angle-right" aria-hidden="true"></i>Camaras Product</a></li>                                                    
                                                         </ul>						
