--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -97,7 +97,7 @@
             <div class="footer">
                 <div class="container">
                     <div class="col-md-4 footer-grids fgd1">
-                    <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h3>FASHION<span>CLUB</span></h3></a>
+                    <a href="/index"><img src={{asset("images/logo2.png")}} alt=" " /><h3>WILDSEA<span>CLUB</span></h3></a>
                     <ul>
                         <li>1234k Avenue, 4th block,</li>
                         <li>New York City.</li>
@@ -123,6 +123,8 @@
                             
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Register</a></li>
+                            <li><a href="/show/profile">Ver perfil</a></li>
+                            <li><a href={{asset("others/guia.pdf")}}>Ver guia de estilo</a></li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
