Arreglado el problema de los children javascript

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1356,7 +1356,7 @@ p.sbmincart-empty-text {
 }
 /*-- //team --*/
 .about-bottom{
-	background:url(../images/abtbtm.jpg) no-repeat 0px 0px;
+	background:url(../images/banner2.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	padding:100px 0;
 	background-attachment:fixed;
