--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -124,7 +124,7 @@
                             <li><a href="/login">Login</a></li>
                             <li><a href="/register">Register</a></li>
                             <li><a href="/show/profile">Ver perfil</a></li>
-                            <li><a href={{asset("others/guia.pdf")}}>Ver guia de estilo</a></li>
+                            <li><a href="/admin">Admin</a></li>
                         </ul>
                     </div>
                     <div class="clearfix"></div>
