--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -15,7 +15,7 @@
 <div class="banner-bootom-w3-agileits">
 	<div class="container">
 		<div class="col-md-5 bb-grids bb-left-agileits-w3layouts">
-			<a href="women.html"><div class="bb-left-agileits-w3layouts-inner">
+			<a href="producto/botellas"><div class="bb-left-agileits-w3layouts-inner">
 					<h3>SALE</h3>
 					<h4>upto<span>75%</span></h4>
 			</div></a>
