--- a/templates/producto_botellas/index.html.twig
+++ b/templates/producto_botellas/index.html.twig
@@ -320,7 +320,29 @@
 				</div>
 				
 				
-				{#
+				
+				{# <div class="col-md-4 women-grids wp2 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+					<a href="single.html"><div class="product-img">
+						<img src={{asset("images/wp4.jpg")}} alt="" />
+						<div class="p-mask">
+							<form action="#" method="post">
+								<input type="hidden" name="cmd" value="_cart" />
+								<input type="hidden" name="add" value="1" /> 
+								<input type="hidden" name="w3ls1_item" value="Casual dress" /> 
+								<input type="hidden" name="amount" value="70.00" /> 
+								<button type="submit" class="w3ls-cart pw3ls-cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</button>
+							</form>
+						</div>
+					</div></a>
+					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
+					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
+					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
+					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
+					<i class="fa fa-star gray-star" aria-hidden="true"></i>
+					<h4 class="titulo-producto">Casual dress</h4>
+					<h5 class="precio-producto">$70.00</h5>
+				</div>
+
 				<div class="col-md-4 women-grids wp2 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp4.jpg")}} alt="" />
@@ -471,8 +493,8 @@
 					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
 					<h4 class="titulo-producto">Casual dress</h4>
 					<h5 class="precio-producto">$180.00</h5>
-				</div> #}
-				{# <div class="col-md-4 women-grids wp9 animated wow slideInUp" data-wow-delay=".5s" class="caja">
+				</div> 
+				<div class="col-md-4 women-grids wp9 animated wow slideInUp" data-wow-delay=".5s" class="caja">
 					<a href="single.html"><div class="product-img">
 						<img src={{asset("images/wp9.jpg")}} alt=""/>
 						<div class="p-mask">
@@ -492,7 +514,7 @@
 					<i class="fa fa-star yellow-star" aria-hidden="true"></i>
 					<h4 class="titulo-producto">Casual dress</h4>
 					<h5 class="precio-producto">$130.00</h5>
-				</div> #}
+				</div>  #}
 				
 		</div>
 		<div id="paginacion" class="col-md-12 text-center"></div>
