--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -11,7 +11,7 @@
 			<form method="post">
 
                 {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>//trans() -> translation
                 {% endif %}
 
                 {% if app.user %}
